--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 
 @font-face {
   font-family: 'MyFont';
@@ -567,6 +571,7 @@ code {
   margin-top: 10px;
   border-radius: 5px;
   width: 80%;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .containerIcon {
   aspect-ratio: 1/1;
@@ -660,6 +665,18 @@ code {
   margin-top: 20px;
   position: relative;
   top: 60px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.link{
+  /* color: #F25A05; */
+  text-decoration: none;
+  font-family: 'MyFont2';
+  font-size: 20px;
+}
+
+.parag{
+  padding: 12px;
 }
 
 .containerSpaceAdjust{
