alteração de imagens

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,8 @@ code {
   height: 10vh;
   width: 80vw;
   margin: auto;
+  max-width: 400px;
+
 }
 
 .fonte2{
@@ -377,11 +379,12 @@ code {
 
 .planos-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 20px;
   margin: 20px auto;
-  width: 100vw;
+  width: 100vw; 
+  max-width: 1000px;
   flex-wrap: wrap;
 }
 
@@ -507,6 +510,16 @@ code {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2); /* sombra para destacar */
 }
 
+.containerTextoSobreMim{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+  max-width: 400px;
+  padding: 20px;
+}
+
 .titlePackage{
   font-family: 'MyFont2';
   font-size: 30px;
@@ -596,7 +609,7 @@ code {
 
 .titleText{
   font-family: 'Myfont';
-  font-size: 40px;
+  font-size: 50px;
   color: white;
   text-align: center;
 
@@ -618,6 +631,7 @@ code {
   flex-direction: column;
   padding: 10px;
   margin-bottom: 20px;
+  margin-top: 20px;
   border-radius: 30px;
   background-color: #F20705;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);  
@@ -637,7 +651,7 @@ code {
 }
 
 .buttonCTA{
-  background-color: #00ff0d;
+  background-color: #F20705;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -647,7 +661,7 @@ code {
   text-align: center;
   text-decoration: none;
   height: 50px;
-  font-size: 16px;
+  font-size: 25px;
   margin: auto;
   cursor: pointer;
   border-radius: 12px;
@@ -801,3 +815,66 @@ h1 {
   text-align: center;
 }
 
+.containerInternoSobreMim{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media (min-width: 1080px) {
+  .depoimentos-container2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+  }
+  .fonte3{
+    font-family: 'MyFont2';
+    font-size: 50px;
+    color: white;
+  }
+
+  .containerInternoSobreMim{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    margin: 0px auto;
+    max-width: 1000px;
+  }
+  .imagem-antes {
+
+    width: auto;
+   max-height:600px; ;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+}
+/* 
+@media (min-width: 700px) and (max-width: 1080px) {
+  .depoimentos-container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;}
+      
+.fonte3{
+  font-family: 'MyFont3';
+  font-size: 45px;
+  color: white;
+}
+fonte4{
+  font-family: 'MyFont3';
+  font-size: 45px;
+  color: white;
+}
+  } */
